2010-11-28  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16342: TCA tree throws Fatal error on displaying deleted records

2010-11-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #16573: Register count_MENUOBJ is not properly initialized

2010-11-26  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16569: Violation of naming conventions in t3lib_content_
	* Fixed bug #16487: modulemenu.js breaks livesearch "Show all" when already in list module (Thanks to Andreas Kiessling)

2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16321: [scheduler] Numeric zero for representation of weekday sunday is not accepted (Thanks to Marcus Krause)
	* Fixed bug #16582: [Caching framework] Remove misleading memcached configuration example from config_default
	* Fixed bug #16445: Performance Tuning: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (Thanks to Jo Hasenau)
	* Fixed bug #16317: [scheduler] Valid values generated from cron command does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16319: [scheduler] CronCmd class variable "values" does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
	* Fixed bug #16571: htmlArea RTE: Configured height of link and image dialogue windows not honoured

2010-11-25  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #16568: Wrong internal object references after cloning tslib_cObj instances

2010-11-25  Steffen Kamper  <steffen@typo3.org>

	* Added Test #16552: Add unit tests for t3lib_div::makeInstance (Thanks to Oliver Klee)
	* Fixed bug #16526: EM resolve dependencies by moving common objects to API class
	* Fixed bug #16527: EM: delete of extension does not work
	* Fixed bug #16528: EM: remove dependency to $TBE_TEMPLATE